...
                    fontFamily = LocalSDKFonts.current.primary,
                    fontWeight = FontWeight.SemiBold,
                    modifier   = Modifier.weight(1f)
                )
                Image(
                    painter        = painterResource(Res.drawable.ic_cross),
                    contentDescription = "Close",
                    modifier           = Modifier
                        .size(24.dp)
                        .clickable { onDismiss() }
                )
            }

...
